--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.usman.easymeds" >
+    package="com.usman.easymeds">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EasyMeds" >
+        android:theme="@style/Theme.EasyMeds">
+        <activity
+            android:name=".blackList"
+            android:exported="true"
+            android:label="BlackList Medicine"
+            android:theme="@style/Theme.PharmaStore"/>
+        <activity
+            android:name=".medicineDetail"
+            android:exported="true"
+            android:label="@string/medicine_detail"
+            android:theme="@style/Theme.medicineDetail" />
+        <activity
+            android:name=".PharmaStore"
+            android:exported="true"
+            android:label="@string/pharma_store"
+            android:theme="@style/Theme.PharmaStore" />
         <activity
             android:name=".ForgotPassword"
             android:exported="true" />
@@ -28,7 +43,7 @@
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.SplashScreen" >
+            android:theme="@style/Theme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
